--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,18 @@
     </scm>
     <properties>
         <java.version>1.8</java.version>
+        <log4j.version>2.17.1</log4j.version>
+        <lombok.version>1.18.8</lombok.version>
+        <hutool.version>5.8.34</hutool.version>
     </properties>
     <dependencies>
         <!--hutools 工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.9</version>
+            <version>${hutool.version}</version>
         </dependency>
+
         <!--        图片转视频，合音频-->
         <dependency>
             <groupId>org.bytedeco</groupId>
@@ -48,6 +52,29 @@
             <version>1.5.2</version>
         </dependency>
 
+        <!-- Log4j2 API -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- Log4j2 Core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Spring-boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
